Added missing device details and Added SendCustomEvent

--- a/Helika.uplugin
+++ b/Helika.uplugin
@@ -16,10 +16,7 @@
 		{
 			"Name": "Helika",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"PlatformAllowList": [
-				"Win64"
-			]
+			"LoadingPhase": "Default"
 		}
 	]
 }
